# mononet

./: .codespell-whitelist.txt  .editorconfig  .gitattributes  .gitignore  .linear.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LINEAR_GUIDE.md  NOTICE.md  PULL_REQUEST_GUIDE.md  README.md  SECURITY.md  codecov.yml  pyproject.toml
.claude/: settings.json
.devcontainer/default/: devcontainer-lock.json  devcontainer.env  devcontainer.json  docker-compose.yml  initialize_devcontainer.sh  setup.sh
.devcontainer/gpu-jax/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.devcontainer/gpu-keras/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.devcontainer/gpu-torch/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.devcontainer/partner/: devcontainer.env  devcontainer.json  post-start.sh  setup_env_vars.sh
.devcontainer/proofs/: devcontainer-lock.json  devcontainer.json  docker-compose.yml  setup.sh
.devcontainer/shared/: host-init.sh  install_common_tools.sh  install_dependencies.sh  install_lean.sh  install_uv.sh  post-create.sh  setup_json_env_vars.sh  setup_path.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  bump-version.yml  codeql.yml  docs-build-deploy.yml  docs.yml  lean.yml  publish.yml
benchmarks/: README.md  run.py  search.py
benchmarks/_common/: __init__.py  bundle.py  config.py  config_io.py  model_builder.py  results.py  runner.py  search.py  search_spaces.py  seeds.py  splits.py
benchmarks/baselines/: __init__.py  xgboost.py
benchmarks/configs/: auto.toml  blog.toml  compas.toml  heart.toml  loan.toml
benchmarks/datasets/: __init__.py  download.py  loader.py  manifest.toml  registry.py  spec.py
benchmarks/notebooks/: search-auto.ipynb  search-blog.ipynb  search-compas.ipynb  search-heart.ipynb  search-loan.ipynb
benchmarks/results/phase2/: .gitignore  auto-absolute-plain.json  auto-absolute-residual.json  auto-switch-plain.json  auto-switch-residual.json
docs/: conf.py  contributing.md  create_api_docs.py  docs.py  index.md  mkdocs.yml  poly.py  reference.md  releasing.md
docs/_static/: extra.css
docs/_templates/: layout.html
docs/about/: changelog.md  contributing.md  index.md  license.md
docs/benchmarks/: 00-overview.ipynb  flavor-comparison.ipynb  index.md  protocol.md
docs/benchmarks/paper-reproduction/: auto-mpg.ipynb  blog-feedback.ipynb  compas.ipynb  heart-disease.ipynb  index.md  loan-defaulter.ipynb  tables.ipynb
docs/concepts/: index.md  monotonicity.md  proofs.md
docs/docs/: index.md  navigation_template.txt
docs/docs/about/: citation.md  license.md
docs/docs/benchmarks/: index.md
docs/docs/concepts/: layers.md  monotonicity.md
docs/docs/guides/: pytorch.md
docs/docs/stylesheets/: extra.css
docs/guides/: index.md  jax.md  keras.md  pytorch.md
docs/overrides/: 404.html  main.html
docs/references/: 2205.11775-runje-2023-constrained-mnn.md  2505.02537-sartor-2025-advancing-cmnn.md
docs/superpowers/: 2026-05-22-sphinx-migration-pr.md
docs/superpowers/plans/: 2026-05-21-mononet-scaffold-migration.md  2026-05-22-E-lean-proofs.md  2026-05-22-deploy-docs-gh-pages.md  2026-05-22-docs-nav-reorg.md  2026-05-22-gh-auth-in-devcontainers.md  2026-05-22-logo.md  2026-05-22-myst-docstrings.md  2026-05-22-sphinx-migration.md  2026-05-25-lean-devcontainer.md  2026-06-27-pypi-alpha-release.md  2026-06-27-sub-project-a-unified-mono-layer.md  2026-06-28-benchmark-foundation-and-reproduction.md  2026-06-28-dependency-management-hardening.md  2026-06-28-phase2a-hp-search-and-flavor-study.md  2026-06-28-relicense-apache-2.0.md  2026-06-29-phase2a-search-execution.md  2026-06-30-standard-benchmark-protocol.md
docs/superpowers/specs/: 2026-05-21-mononet-package-design.md  2026-05-22-A-core-algorithm-and-backends-design.md  2026-05-22-B-paper-reproduction-design.md  2026-05-22-C-extended-benchmarks-design.md  2026-05-22-D-injective-monotonic-and-flows-design.md  2026-05-22-E-lean-proofs-design.md  2026-05-22-deploy-docs-gh-pages-design.md  2026-05-22-docs-nav-reorg-design.md  2026-05-22-gh-auth-in-devcontainers-design.md  2026-05-22-logo-design.md  2026-05-22-myst-docstrings-design.md  (+12 more)
mononet/: __init__.py
mononet/core/: __init__.py  config.py  numerics.py  reference.py  types.py
mononet/jax/: __init__.py  _kernels.py  layers.py  models.py
mononet/keras/: __init__.py  _kernels.py  layers.py  models.py
mononet/torch/: __init__.py  _kernels.py  layers.py  models.py
proofs/: .gitignore  Proofs.lean  README.md  lake-manifest.json  lakefile.lean
proofs/Mononet/: Activations.lean  Basic.lean  DanielsVelikova.lean  Layers.lean  Lemma1Mono.lean  Lemma2Combined.lean  Lemma5Heaviside.lean  Lemma6Equiv.lean  Theorem7Universal.lean
proofs/tools/: build.sh  doc-gen.sh
tests/: conftest.py  test_import.py  test_mononet.py  test_top_level_imports.py
tests/benchmarks/: test_baseline_xgboost.py  test_bundle.py  test_config.py  test_config_io.py  test_download.py  test_loaders.py  test_model_builder_jax.py  test_model_builder_keras.py  test_model_builder_torch.py  test_results.py  test_run_dataset.py  test_runner.py  test_search.py  test_search_cli.py  test_search_spaces.py  test_smoke.py  test_splits.py
tests/core/: test_config.py  test_reference_activations.py  test_reference_dense.py  test_reference_residual.py  test_reference_signatures.py  test_types.py
tests/equivalence/: _cases.py  test_loader.py  test_mono_input.py  test_mono_linear.py  test_mono_residual.py  test_placeholder.py
tests/jax/: test_property_monotonic.py  test_public_api.py
tests/keras/: test_property_monotonic.py  test_public_api.py
tests/torch/: test_property_monotonic.py  test_public_api.py
tools/: build-docs-pre-commit.sh  build-docs.sh  execute-benchmarks.sh  gen_versions_json.py  get-version.sh  lint-pre-commit.sh  lint.sh  mononet-benchmark-search  regenerate-cases.py  render-logo.py  serve-docs.sh  static-analysis.sh  static-pre-commit.sh
(+19 files in other folders)
