[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mononet"
version = "0.0.0"
description = "Implementation of unconstrained neural networks"
authors = [{ name = "Davor Runje", email = "davor.runje@fer.hr" }]
requires-python = "==3.13.*"
readme = "README.md"
dependencies = [
    "pydantic>=2.13.0,<3.0.0",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "ipython==9.12.0",
    "ipykernel==7.2.0",
    "mypy==1.20.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "nest-asyncio==1.6.0",
]
devdocs = [
    "mkdocs-material==9.7.6",
    "mkdocstrings==1.0.3",
    "mkdocstrings-python==2.0.3",
    "mkdocs-literate-nav==0.6.3",
    "mkdocs-glightbox==0.5.2",
    # "pillow==12.0.0",  # defined by model-proxy
    "mdx-include==1.4.2",
    "typer==0.24.1",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-minify-plugin==0.8.0",
    "mike==2.1.4",
]
lint = [
    "pre-commit==4.5.1",
    "mypy==1.20.1",
    "types-pyyaml==6.0.12.20260408",
    "types-setuptools==82.0.0.20260408",
    "ruff==0.15.10",
    "bandit==1.9.4",
    "semgrep==1.159.0",
    "codespell==2.4.2",
    "detect-secrets==1.5.0",
]

[tool.uv]
default-groups = [
    "dev",
    "devdocs",
    "lint",
]
override-dependencies = [
    "click>=8.2.1",  # semgrep pins <8.2, but typer 0.24+ requires >=8.2.1
]

[[tool.uv.index]]
name = "synthpop-pkgs"
url = "https://none/synthpop/pkgs/+simple/"

[tool.hatch.build.targets.sdist]
include = ["mononet"]

[tool.hatch.build.targets.wheel]
include = ["mononet"]

[tool.mypy]
files = ["mononet", "tests"]
strict = true
strict_bytes = true
local_partial_types = true
python_version = "3.11"
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = ["pydantic.mypy"]

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

follow_imports = "silent"
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.pytest.ini_options]
addopts = '--cov=mononet --cov-append --cov-branch --cov-report=xml'
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" # per-test event loops

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"
include = [
    "mononet/**/*.py",
    "mononet/**/*.pyi",
    "tests/**/*.py",
    "docs/**/*.py",
    "pyproject.toml",
]
exclude = ["docs/docs_src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W",     # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90",   # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N",     # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D",     # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I",     # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F",     # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",    # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",     # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",     # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20",   # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM",   # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",    # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH",   # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF",   # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF",  # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
    "UP",    # pyupgrade              https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "E501",     # line too long, handled by formatter later
]

[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = [
    "D100",     # missing docstring in public module
    "D101",
    "D102",
    "D103",
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic methods
    "D106",     # missing docstring in public nested class
    "D107",     # missing docstring in __init__
    "T20",      # flake8-print
]

"tests/**/*.py" = [
    "D100",     # missing docstring in public module
    "D101",
    "D102",
    "D103",
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic methods
    "D106",     # missing docstring in public nested class
    "D107",     # missing docstring in __init__
    "T20",      # flake8-print
    "PLR2004", # magic-value-comparison
    "S101",    # use assert
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
]

[tool.bandit]
