[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mononet"
version = "0.0.0"
description = "Unconstrained monotonic neural networks for PyTorch, JAX, and Keras"
authors = [{ name = "Davor Runje", email = "davor.runje@fer.hr" }]
maintainers = [{ name = "Davor Runje", email = "davor.runje@fer.hr" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE", "NOTICE.md"]
keywords = ["monotonic", "neural-network", "pytorch", "jax", "keras", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "typing-extensions>=4.12; python_version<'3.12'",
]

[project.urls]
Homepage      = "https://github.com/davorrunje/mononet"
Documentation = "https://davorrunje.github.io/mononet"
Repository    = "https://github.com/davorrunje/mononet"
Issues        = "https://github.com/davorrunje/mononet/issues"
Changelog     = "https://github.com/davorrunje/mononet/blob/main/CHANGELOG.md"
Paper         = "https://arxiv.org/abs/2205.11775"
Patent        = "https://patents.justia.com/patent/11551063"

[project.optional-dependencies]
# CPU backends
torch       = ["torch>=2.4"]
jax         = ["jax>=0.4.30", "flax>=0.10"]
keras       = ["keras>=3.5", "jax>=0.4.30"]
all         = ["mononet[torch,jax,keras]"]

# GPU backends — devcontainer-level scripts configure the framework's
# CUDA wheel index when needed.
torch-gpu   = ["torch>=2.4"]
jax-gpu     = ["jax[cuda12]>=0.4.30", "flax>=0.10"]
keras-gpu   = ["keras>=3.5", "jax[cuda12]>=0.4.30"]

[dependency-groups]
dev = [
    "ipython",
    "ipykernel",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "nest-asyncio==1.6.0",
    "hypothesis>=6.115",
]
docs = [
    "sphinx>=8.1",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autodoc2>=0.5",
    "myst-nb>=1.1",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-togglebutton>=0.3",
    "sphinx-autobuild>=2024.10",
    "sphinx-polyversion>=2.0",
    "cairosvg>=2.7",
    "linkify-it-py>=2.0",
]
lint = [
    "pre-commit==4.6.0",
    "mypy==2.1.0",
    "types-pyyaml==6.0.12.20260518",
    "types-setuptools==82.0.0.20260518",
    "ruff==0.15.13",
    "bandit==1.9.4",
    "semgrep==1.163.0",
    "codespell==2.4.2",
    "detect-secrets==1.5.0",
]
bench = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[tool.uv]
default-groups = ["dev", "docs", "lint"]
override-dependencies = [
    "click>=8.2.1",  # semgrep pins <8.2, but typer 0.24+ requires >=8.2.1
]

[tool.hatch.build.targets.sdist]
include = ["mononet"]

[tool.hatch.build.targets.wheel]
include = ["mononet"]

[tool.mypy]
files = ["mononet", "tests"]
strict = true
strict_bytes = true
local_partial_types = true
python_version = "3.11"
ignore_missing_imports = true
install_types = true
non_interactive = true
# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

follow_imports = "silent"
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true

# Framework backends are optional extras; mypy sees them as `Any` when
# not installed. Suppress the resulting "Class cannot subclass X (has
# type 'Any')" errors for the four framework-specific layer/model files.
[[tool.mypy.overrides]]
module = [
    "mononet.torch.layers",
    "mononet.torch.models",
    "mononet.jax.layers",
    "mononet.jax.models",
    "mononet.keras.layers",
    "mononet.keras.models",
]
disallow_subclassing_any = false

[tool.pytest.ini_options]
addopts = '--cov=mononet --cov-append --cov-branch --cov-report=term-missing'
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" # per-test event loops

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"
include = [
    "mononet/**/*.py",
    "mononet/**/*.pyi",
    "tests/**/*.py",
    "docs/**/*.py",
    "tools/**/*.py",
    "pyproject.toml",
]
exclude = ["docs/docs_src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W",     # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90",   # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N",     # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D",     # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I",     # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F",     # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",    # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",     # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",     # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20",   # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM",   # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",    # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH",   # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF",   # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF",  # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
    "UP",    # pyupgrade              https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "E501",     # line too long, handled by formatter later
]

[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = [
    "D100",     # missing docstring in public module
    "D101",
    "D102",
    "D103",
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic methods
    "D106",     # missing docstring in public nested class
    "D107",     # missing docstring in __init__
    "T20",      # flake8-print
]

"tools/**/*.py" = [
    "D103",     # missing docstring in public function (CLI entry points)
    "T20",      # flake8-print (tools use print for user feedback)
]

"tests/**/*.py" = [
    "D100",     # missing docstring in public module
    "D101",
    "D102",
    "D103",
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic methods
    "D106",     # missing docstring in public nested class
    "D107",     # missing docstring in __init__
    "T20",      # flake8-print
    "PLR2004", # magic-value-comparison
    "S101",    # use assert
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
]

[tool.bandit]
